--- a/configs/Mamba_ablation/peptides-func-1.yaml
+++ b/configs/Mamba_ablation/peptides-func-1.yaml
@@ -11,14 +11,14 @@ dataset:
   task_type: classification_multilabel
   transductive: False
   node_encoder: True
-  node_encoder_name: Atom+LapPE
+  node_encoder_name: LinearNode
   node_encoder_bn: False
   edge_encoder: True
   edge_encoder_name: Bond
   edge_encoder_bn: False
   split_mode: standard
 posenc_LapPE:
-  enable: True
+  enable: False
   eigen:
     laplacian_norm: none
     eigvec_norm: L2
@@ -38,13 +38,12 @@ model:
   graph_pooling: mean
   num_experts: 4
 gt:
+  # layer_type: CustomGatedGCN+Mamba_Hybrid_Degree_Noise_RandomWalk_NodeLevel
   layer_type: CustomGatedGCN+Mamba_Hybrid_Degree_Noise
-  # layer_type: CustomGatedGCN+Mamba_Random_WeightedSum_Multi
   # layer_type: CustomGatedGCN+"Mamba_Degree_Noise_Average_Multi
   # layer_type: CustomGatedGCN+Mamba_Random_Average_Multi
   # layer_type: CustomGatedGCN+Mamba_Degree_Noise_WeightedSum_Multi
   # layer_type: CustomGatedGCN+Mamba_Degree_Noise_MultiHead_Multi
-  # layer_type: CustomGatedGCN+Mamba_RandomWalk_NodeMulti
   n_heads: 4
   dim_hidden: 96  # `gt.dim_hidden` must match `gnn.dim_inner`
   dropout: 0.0
