--- a/configs/Mamba_random_walk/peptides-func-2.yaml
+++ b/configs/Mamba_random_walk/peptides-func-2.yaml
@@ -11,14 +11,14 @@ dataset:
   task_type: classification_multilabel
   transductive: False
   node_encoder: True
-  node_encoder_name: Atom+LapPE
+  node_encoder_name: LinearNode
   node_encoder_bn: False
   edge_encoder: True
   edge_encoder_name: Bond
   edge_encoder_bn: False
   split_mode: standard
 posenc_LapPE:
-  enable: True
+  enable: False
   eigen:
     laplacian_norm: none
     eigvec_norm: L2
